--- a/微场景/css/style.css
+++ b/微场景/css/style.css
@@ -83,9 +83,14 @@ body {
     line-height: 26px;
 }
 .footer{
+    
     padding-top: 125%;
 }
-.footer h2.p{
+.footer h2{
+    color: red;
+    top:50px
+}
+.footer p{
     color:#01b7a0;
     font-weight: bold;
 }
@@ -95,6 +100,7 @@ body {
     bottom: 0;
     left: 0;
 }
-.footer img:nth-of-type(1){
-    left: 14%;
+
+.footer img:nth-of-type(2){
+    left: -12%;
 }
