--- a/微场景/css/style.css
+++ b/微场景/css/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box
+}
 html, body {
     position: relative;
     height: 100%;
@@ -108,4 +113,28 @@ body {
 
 .footer img:nth-of-type(2){
     left: -12%;
+}
+.s2{
+    background: url("../img/bj.png");
+    height: 100%;
+    color: #01f6cb;
+}
+.s2 h2{
+    padding-top: 70px;
+    
+}
+.s2 .s2bg{
+    background: url(../img/zhong.png);
+    background-size: 100% 100%;
+    width: 80%;
+    margin: 0 auto;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.s2 .s2bg .dw1, .dw2, .dw3{
+    text-align: left;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    
 }
