--- a/微场景/css/style.css
+++ b/微场景/css/style.css
@@ -109,6 +109,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
+    animation-iteration-count: infinite;
 }
 
 .footer img:nth-of-type(2){
@@ -117,11 +118,32 @@ body {
 .s2{
     background: url("../img/bj.png");
     height: 100%;
-    color: #01f6cb;
 }
 .s2 h2{
     padding-top: 70px;
+    color: #01f6cb;
+
     
+}
+.s2 h2::before{
+    background: url(../img/left.png);
+    background-size: 100% 100%;
+    content: "";
+    width: 80px;
+    height: 39px;
+    display: inline-block;
+    position: absolute;
+    top:68px;
+    left: 54px
+}
+.s2 h2::after{
+    background: url(../img/right.png);
+    background-size: 100% 100%;
+    content: "";
+    width: 80px;
+    height: 39px;
+    display: inline-block;
+    position: absolute;
 }
 .s2 .s2bg{
     background: url(../img/zhong.png);
@@ -136,5 +158,25 @@ body {
     padding-left: 5px;
     padding-right: 5px;
     padding-top: 5px;
+    color: #01f6cb;
     
+}
+.s2 .dw3{
+    padding-bottom: 20px;
+}
+.s2 span{
+    background: url(../img/9.png);
+    background-size: 100% 100%;
+    width: 174px;
+    display: block;
+    color: #07001c;
+    font-weight: bold;
+    font-family: cursive;
+    line-height: 27px;
+    position: absolute;
+    top: 488px;
+    left: 95px;
+}
+.s2 .footer{
+    animation-iteration-count: infinite;
 }
