--- a/微场景/css/style.css
+++ b/微场景/css/style.css
@@ -15,6 +15,31 @@ body {
     margin: 0;
     padding: 0;
 }
+#mp3btn{
+    position: absolute;
+    z-index: 100;
+    right: 5%;
+    top: 3%;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%; 
+    background-color: #06060661;
+    text-align: center;
+    line-height: 4;
+    border:2px black solid;
+    animation: myfirst 3s infinite linear;
+}
+#mp3btn img{
+    width: 30px;
+    height: 30px;
+}
+@keyframes myfirst{
+    0%{transform:rotateZ(0deg)}
+    100%{transform: rotateZ(360deg)}
+}
+.swing{
+    transform-origin: center;
+}
 .swiper-container {
     width: 100%;
     height: 100%;
@@ -139,10 +164,10 @@ body {
 .s2 h2::after{
     background: url(../img/right.png);
     background-size: 100% 100%;
-    content: "";
+    content: ""; 
     width: 80px;
     height: 39px;
-    display: inline-block;
+    display: inline-block;  /*行内块级元素*/
     position: absolute;
 }
 .s2 .s2bg{
